feat: add TaskService implementation